xforms module: added browser based mini form designer and runner